--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "capacitor-file-zip",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Generate Zip File",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
   "files": [
-    "android/src/main/",
-    "android/libs",
-    "android/build.gradle",
+    "android/",
     "dist/",
-    "ios/Plugin/",
+    "ios/",
     "CapacitorPluginZip.podspec"
   ],
   "author": "Patrick Araujo",
