--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,12 +5,17 @@ def capacitor_pods
   use_frameworks!
   pod 'Capacitor', :path => '../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../node_modules/@capacitor/ios'
+  # Pods for IonicRunner
+  pod 'SSZipArchive'
 end
 
 target 'Plugin' do
   capacitor_pods
+  
 end
 
 target 'PluginTests' do
   capacitor_pods
+
 end
+
